# prospector-btc

./: .env  .eslintrc.json  .gitignore  Cargo.toml  README.md  docker-compose.yml  dummy_data.csv  jest.preset.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  test.csv  tsconfig.base.json
.docs/: CODEX-PROSPECTOR..md  EXTRACCIoN-DE-IDENTIDAD.md  arquitectura-prospector-btc.md  blueprint-prospector-btc.md  convenciones-prospector.md  manifiesto-de-pruebas.md  todo.md  turso-tutorial-y-uso.md
.github/workflows/: build-release.yml  ci.yml
apps/census-taker/: Cargo.toml
apps/census-taker/src/: main.rs
apps/miner-worker/: Cargo.toml  project.json
apps/miner-worker/src/: main.rs
apps/orchestrator/: Cargo.toml  Dockerfile  README_DEPLOY.md  project.json
apps/orchestrator/src/: handlers.rs  main.rs  middleware.rs  routes.rs  state.rs
apps/web-dashboard/: .eslintrc.json  Dockerfile  jest.config.ts  jest.setup.ts  next.config.js  project.json  tailwind.config.js  tsconfig.json  tsconfig.spec.json
apps/web-dashboard/.next/dev/: prerender-manifest.json
apps/web-dashboard/.next/dev/cache/: .rscinfo
apps/web-dashboard/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
apps/web-dashboard/app/: layout.tsx  page.tsx  providers.tsx
apps/web-dashboard/app/admin/: page.tsx
apps/web-dashboard/components/: admin-guard.tsx  identity-vault.tsx
libs/core/generators/: Cargo.toml  project.json
libs/core/generators/src/: address_legacy.rs  errors.rs  lib.rs  wif.rs
libs/core/math-engine/: Cargo.toml  project.json
libs/core/math-engine/benches/: secp256k1_bench.rs
libs/core/math-engine/src/: errors.rs  hashing.rs  lib.rs  private_key.rs  public_key.rs
libs/core/probabilistic/: Cargo.toml  project.json
libs/core/probabilistic/src/: errors.rs  filter_wrapper.rs  lib.rs
libs/core/probabilistic/tests/: bloom_reliability.rs
libs/domain/forensics/: Cargo.toml  project.json
libs/domain/forensics/src/: debian_rng.rs  lib.rs
libs/domain/mining-strategy/: Cargo.toml
libs/domain/mining-strategy/src/: brainwallet.rs  combinatoric.rs  dictionary.rs  executor.rs  lib.rs
libs/domain/models-rs/: Cargo.toml
libs/domain/models-rs/src/: finding.rs  identity.rs  lib.rs  work.rs  worker.rs
libs/features/telemetry-ui/: jest.config.ts  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
libs/features/telemetry-ui/src/: index.ts
libs/features/telemetry-ui/src/components/: telemetry-table.tsx
libs/infra/api-client-ts/: jest.config.ts  tsconfig.json  tsconfig.lib.json
libs/infra/api-client-ts/src/: index.ts
libs/infra/api-client-ts/src/lib/: client.ts  hooks.ts  schemas.ts
libs/infra/db-turso/: Cargo.toml
libs/infra/db-turso/src/: client.rs  errors.rs  lib.rs  schema.rs
libs/infra/db-turso/src/repositories/: finding.rs  identity.rs  job.rs  mod.rs
libs/infra/transport/: Cargo.toml
libs/infra/transport/src/: lib.rs
libs/shared/heimdall-rs/: Cargo.toml  project.json
libs/shared/heimdall-rs/src/: lib.rs
libs/shared/heimdall-ts/: jest.config.ts  package.json  project.json  tsconfig.json
libs/shared/heimdall-ts/src/: index.ts
libs/shared/heimdall/src/: lib.rs
libs/shared/ui-kit/: jest.config.ts  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
libs/shared/ui-kit/src/: index.ts
libs/shared/ui-kit/src/components/: card.tsx
scripts/: build_miner_static.sh
tools/docker/: miner-static.Dockerfile
tools/provisioner/: package.json  project.json  tsconfig.json
tools/provisioner/src/: config.ts  harvester.ts  main.ts
tools/provisioner/src/lib/: browser.ts  colab.ts  payload.ts
