[workspace]
resolver = "2"
members = [
    "apps/census-taker",
    "apps/miner-worker",
    "apps/orchestrator",
    "libs/core/math-engine",
    "libs/core/generators",
    "libs/core/probabilistic",
    "libs/domain/models-rs",
    "libs/domain/mining-strategy",
    "libs/infra/db-turso",
    "libs/infra/transport",
    "libs/domain/forensics",
    "libs/shared/heimdall-rs"
]

# OPTIMIZACIONES GLOBALES PARA TODO EL MONOREPO
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
