# apps/census-taker/Cargo.toml
[package]
name = "prospector-census-taker"
version = "0.1.0"
edition = "2021"

[dependencies]
# INTERNAS (Nuestros Aparatos)
prospector-core-probabilistic = { path = "../../libs/core/probabilistic" }
# prospector-infra-db = { path = "../../libs/infra/db-turso" } # Descomentar si vas a llenar la DB

# EXTERNAS
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] } # CLI Parsing
indicatif = "0.17" # Barras de progreso profesionales
anyhow = "1.0" # Manejo de errores simplificado para Apps

[bin]
name = "census-taker"
path = "src/main.rs"
