
[package]
name = "prospector-census-taker"
version = "0.1.0"
edition = "2021"

[dependencies]
# INTERNAS
prospector-core-probabilistic = { path = "../../libs/core/probabilistic" }

# EXTERNAS
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"

# CORRECCIÓN CRÍTICA AQUÍ: Dobles corchetes [[bin]]
[[bin]]
name = "census-taker"
path = "src/main.rs"
