# apps/miner-worker/Cargo.toml
[package]
name = "prospector-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
# NUCLEO
prospector-core-math = { path = "../../libs/core/math-engine" }
prospector-core-gen = { path = "../../libs/core/generators" }
prospector-core-probabilistic = { path = "../../libs/core/probabilistic" }

# DOMINIO
prospector-domain-models = { path = "../../libs/domain/models-rs" }
prospector-domain-strategy = { path = "../../libs/domain/mining-strategy" }

# INFRAESTRUCTURA
prospector-infra-transport = { path = "../../libs/infra/transport" }

# PARALELISMO & UTILS
rayon = "1.8"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
ctrlc = "3.4"
futures-util = "0.3"

# CLIENTE HTTP
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "miner-worker"
path = "src/main.rs"
