# apps/orchestrator/Cargo.toml
# =================================================================
# APARATO: ORCHESTRATOR MANIFEST
# CLASIFICACIN: ELITE / PRODUCTION READY
# =================================================================

[package]
name = "prospector-orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
publish = false # Evita publicaci贸n accidental en crates.io (Soberan铆a)

[dependencies]
# -----------------------------------------------------------------
# 1. SINAPSIS INTERNA (Monorepo Links)
# -----------------------------------------------------------------
# Modelos de Dominio (El lenguaje com煤n entre Minero y Orquestador)
prospector-domain-models = { path = "../../libs/domain/models-rs" }
# Capa de Persistencia (Conector a Turso/libSQL)
prospector-infra-db = { path = "../../libs/infra/db-turso" }

# -----------------------------------------------------------------
# 2. MOTOR ASNCRONO & WEB SERVER
# -----------------------------------------------------------------
# Framework Web de alto rendimiento y ergonom铆a
axum = "0.7"

# Runtime As铆ncrono (El coraz贸n del sistema)
# features=["full"] habilita multi-threading, I/O, timers y macros.
tokio = { version = "1.0", features = ["full"] }

# -----------------------------------------------------------------
# 3. MIDDLEWARE & LOGSTICA (La Clave de Hydra-Zero)
# -----------------------------------------------------------------
tower = "0.4"
#  CRTICO:
# - "cors": Permite conexiones desde Dashboards y Mineros remotos.
# - "trace": Logging detallado de cada petici贸n HTTP.
# - "fs": Habilita 'ServeDir' para servir 'utxo_filter.bin' a los workers (Auto-Hidrataci贸n).
# - "limit": Protecci贸n b谩sica contra DDOS (RequestBodyLimit).
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }

# -----------------------------------------------------------------
# 4. SERIALIZACIN (Intercambio de Datos)
# -----------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# -----------------------------------------------------------------
# 5. OBSERVABILIDAD & TELEMETRA
# -----------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# -----------------------------------------------------------------
# 6. UTILIDADES DE CAMPO
# -----------------------------------------------------------------
# Identificadores 煤nicos para Jobs y Workers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Manejo de tiempo para Heartbeats
chrono = { version = "0.4", features = ["serde"] }

# Gesti贸n de Configuraci贸n (DX Local)
dotenvy = "0.15"

[bin]
name = "orchestrator"
path = "src/main.rs"

# Optimizaci贸n para release: Menor tama帽o, mayor velocidad
[profile.release]
lto = true
codegen-units = 1
strip = true
