[package]
name = "prospector-core-math"
version = "0.1.0"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Motor matemático de bajo nivel para operaciones de curva elíptica secp256k1."

[dependencies]
# Curva Elíptica (C bindings + Assembly)
# features=["recovery", "rand"] necesarios para operaciones completas
secp256k1 = { version = "0.27", features = ["recovery", "rand"] }
sha2 = "0.10"
ripemd = "0.1"
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
rand = "0.8"
criterion = "0.5" # 🔥 CRÍTICO PARA LA TESIS

[[bench]]
name = "secp256k1_bench"
harness = false

[lib]
name = "prospector_core_math"
path = "src/lib.rs"
