[package]
name = "prospector-core-bloom"
version = "0.1.0"
edition = "2021"

[dependencies]
bloomfilter = { version = "1.0.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"

# Dependencia interna para tests
prospector-core-math = { path = "../math-engine" }

[lib]
name = "prospector_core_bloom"
path = "src/lib.rs"
