# libs/core/probabilistic/Cargo.toml
[package]
name = "prospector-core-probabilistic"
version = "0.1.0"
edition = "2021"

[dependencies]
bloomfilter = { version = "1.0.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"

# DEPENDENCIAS DE DESARROLLO (Solo para tests)
[dev-dependencies]
rand = "0.8"  # <-- ESTA FALTABA PARA bloom_reliability.rs
prospector-core-math = { path = "../math-engine" }

[lib]
name = "prospector_core_probabilistic"
path = "src/lib.rs"
