# libs/domain/mining-strategy/Cargo.toml
[package]
name = "prospector-strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencias Internas
prospector-core-math = { path = "../../core/math-engine" }
prospector-core-gen = { path = "../../core/generators" }
prospector-domain-models = { path = "../models-rs" }

# Dependencias Externas
log = "0.4"
rand = "0.8"
sha2 = "0.10" # Para hashear frases brainwallet

[lib]
name = "prospector_strategy"
path = "src/lib.rs"
