[package]
name = "prospector-domain-models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Para compartir tipos con el Frontend (opcional pero recomendado)
# ts-rs = "7.0"

[lib]
name = "prospector_domain_models"
path = "src/lib.rs"
