[package]
name = "prospector-infra-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Driver oficial de Turso/libSQL
libsql = { version = "0.3", features = ["serde"] }

# Modelos de Dominio (Para mapear filas a objetos)
prospector-domain-models = { path = "../../domain/models-rs" }

# Utilidades de Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Manejo de Errores
thiserror = "1.0"
anyhow = "1.0"

# Identificadores
uuid = { version = "1.0", features = ["v4"] }

# Async Traits
async-trait = "0.1"

# TIEMPO Y FECHA (CORRECCIÓN DEL ERROR CRÍTICO)
# Necesario para mapear las columnas DATETIME de SQLite a objetos Rust
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "prospector_infra_db"
path = "src/lib.rs"
